--- a/app/src/main/res/layout/fragment_to_do.xml
+++ b/app/src/main/res/layout/fragment_to_do.xml
@@ -8,8 +8,11 @@
         android:id="@+id/toDoEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter task name"
-        android:layout_margin="8dp"/>
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:hint="Enter task name" />
 
     <!-- Button for adding tasks -->
     <Button
