--- a/app/src/main/res/layout/item_to_do.xml
+++ b/app/src/main/res/layout/item_to_do.xml
@@ -30,6 +30,22 @@
                 android:layout_marginStart="8dp"
                 android:textSize="18sp"
                 android:textStyle="bold"/>
+
+            <Button
+                android:id="@+id/editButton"
+                style="?attr/materialIconButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="1dp"
+                android:layout_marginEnd="1dp"
+                app:icon="@drawable/round_edit_24"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.5" />
+
+
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 </RelativeLayout>
