--- a/app/src/main/res/layout/fragment_to_do.xml
+++ b/app/src/main/res/layout/fragment_to_do.xml
@@ -12,17 +12,18 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:hint="Enter task name" />
+        android:hint="Enter task name"
+        android:inputType="text" />
 
     <!-- Button for adding tasks -->
     <Button
         android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Task"
         android:layout_below="@id/toDoEditText"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"/>
+        android:layout_marginEnd="8dp"
+        android:text="Add Task" />
 
     <!-- RecyclerView to display tasks with a fixed height -->
     <androidx.recyclerview.widget.RecyclerView
