--- a/app/src/main/res/layout/upcoming_edit.xml
+++ b/app/src/main/res/layout/upcoming_edit.xml
@@ -169,7 +169,8 @@
                 android:id="@+id/examTimes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp">
+                android:layout_marginTop="8dp"
+                android:baselineAligned="false">
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/examBeginTimeContainer"
